@@ -342,8 +342,8 @@ public class AddeImageAdvancedPanel extends DataSelectionComponent {
         String magVal = AddeImageDataSource.getKey(source,
                             AddeImageURL.KEY_MAG);
         String[] magVals = magVal.split(" ");
-        this.elementMag = new Integer(magVals[1]).intValue();
-        this.lineMag    = new Integer(magVals[0]).intValue();
+        this.elementMag = Integer.parseInt(magVals[1]);
+        this.lineMag    = Integer.parseInt(magVals[0]);
 
 
         // init information for the location and the default is LATLON
@@ -650,10 +650,10 @@ public class AddeImageAdvancedPanel extends DataSelectionComponent {
                 StringTokenizer tok = new StringTokenizer(cards[i]);
                 String          str = tok.nextToken();
                 str = tok.nextToken();
-                Float flt = new Float(str);
+                Float flt = Float.valueOf(Float.parseFloat(str));
                 res[0] = flt.floatValue();
                 str    = tok.nextToken();
-                flt    = new Float(str);
+                flt    = Float.valueOf(Float.parseFloat(str));
                 res[1] = flt.floatValue();
                 return res;
             }
@@ -1060,7 +1060,7 @@ public class AddeImageAdvancedPanel extends DataSelectionComponent {
         fullResBtn =
             GuiUtils.makeImageButton("/auxdata/ui/icons/arrow_out.png", this,
                                      "setToFullResolution",
-                                     new Boolean(true));
+                                     Boolean.valueOf(true));
         fullResBtn.setContentAreaFilled(false);
         fullResBtn.setToolTipText("Set fields to retrieve full image");
 
